Refactored JS for table and fixed word wrapping

--- a/ui.frontend/src/main/webpack/components/content/core-table/v1/table/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-table/v1/table/style.scss
@@ -9,11 +9,9 @@
     border-style: hidden;
 }
 .sl-table {
-    @include media-breakpoint-down(md) {             
-        overflow: auto;
-        td, th {
-            white-space: nowrap;
-        }
+    overflow: auto;
+    td, th {
+        white-space: nowrap;
     }
     table {
         border: none;
